# nearest-smaller-suffixes

./: .gitignore  CMakeLists.txt  README.md  auto-format.sh  example.cpp
benchmark/include/: file_util.hpp  lyndon-isa-nsv.hpp  run_algorithm.hpp  time_measure.hpp
benchmark/src/: CMakeLists.txt  benchmark.cpp  main.cpp
benchmark/test/: CMakeLists.txt  test_array.cpp  test_stack.cpp  test_xss.cpp  test_xss_par.cpp
benchmark/test/strings/: base.hpp  test_lookahead.hpp  test_manual.hpp  test_overlap.hpp  test_random.hpp  test_runs.hpp
benchmark/test/util/: check_array.hpp  check_tree.hpp  testsuite.cmake
include/: lyndon_array.hpp  xss.hpp  xss_sdsl.hpp
include/array/: algorithm.hpp  amortized_lookahead.hpp  run_extension.hpp
include/array/parallel/: algorithm.hpp  amortized_lookahead.hpp  run_extension.hpp
include/array/sequential/: algorithm.hpp  find_pss.hpp  run_extension.hpp
include/common/: context.hpp  util.hpp
include/ds/array/: algorithm.hpp  amortized_lookahead.hpp  context.hpp  find_pss.hpp  run_extension.hpp
include/ds/tree/: algorithm.hpp  amortized_lookahead.hpp  bit_vector.hpp  find_pss.hpp  run_extension.hpp  stack.hpp
include/ds/tree/support/: pss_tree_support_naive.hpp  pss_tree_support_sdsl.hpp
include/suffix-array/: saca.hpp
include/tree/: algorithm.hpp  amortized_lookahead.hpp  bit_vector.hpp  find_pss.hpp  run_extension.hpp  stack.hpp
include/tree/support/: pss_tree_support_naive.hpp  pss_tree_support_sdsl.hpp
include/xss/array/sequential/: runs.hpp
include/xss/tree/: bit_vector.hpp
